added htmx template for viewer

--- a/frontend_htmx/scheduler/index.html
+++ b/frontend_htmx/scheduler/index.html
@@ -21,7 +21,8 @@
             </div>
             <button type="submit" class="button">Schedule Task</button>
         </form>
-        <p id="status-message" class="status-message"></p>
+        <!-- <p id="status-message" class="status-message"></p> -->
+        <div id="status-message"></div>
     </div>
 
     <script src="/static/script.js"></script>
